--- a/style.css
+++ b/style.css
@@ -36,6 +36,11 @@
     border-style: solid;
     margin-bottom: 5rem;
   }
+
+  div {
+      height: inherit;
+      width: inherit;
+  }
   
   .horiz {
     display: flex;
@@ -54,6 +59,10 @@
     height: 16.666666%;
   }
   
+  .ninevert {
+      height: 11.1111%;
+  }
+
   .threehoriz {
     width: 33.3%;
   }
@@ -79,13 +88,34 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-blend-mode:exclusion;
   }
 
   #flag-eagle {
     width: 100%;
   }
   
+  .greek-plus {
+    position: relative;
+    top: -100%;
+    width: 33.333%;
+    height: 55.5%;
+    z-index: 2;
+  }
+
+  .plus-stripe-vert {
+      position: relative;
+      left: 40%;
+      width: 20%;
+      height: 100%;
+  }
+
+  .plus-stripe-horiz {
+      position: relative;
+      top: -60%;
+      width: 100%;
+      height: 20%;
+  }
+
   /* Colors/ Feel free to add your own! */
   
   .red {
@@ -114,6 +144,10 @@
   
   .blue {
     background-color: blue;
+  }
+
+  .greekblue {
+      background: #0033a0;
   }
   
   .lightblue {
